--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cookie Sink</title>
-
   <style>
     body {
       background-color: #000;
@@ -16,7 +15,7 @@
       max-width: 35em;
       min-height: 100vh;
       text-align: center;
-      background-color: #fff;
+      background-color: #eee;
       margin: 0 auto;
     }
 
@@ -24,8 +23,11 @@
       margin: 0;
       padding-top: 0.5em;
     }
+
+    img {
+      border: 10px inset #fff;
+    }
   </style>
-  
 </head>
 <body>
   <main>
@@ -35,6 +37,7 @@
         src="https://cookie-source.herokuapp.com/images/web_beacon.png"
         alt="web beacon from cookie-source.herokuapp.com is unavailable"
       >
+      <!-- https://unsplash.com/photos/g-LrCv5yS0I -->
       <figcaption>
         <h3>
           Image from a third-party site that sets cross-site cookies
